# hpe-networking-mcp

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTRUCTIONS.md  LICENSE  README.md  build.sh  docker-compose.dev.yml  docker-compose.override.yml.example  docker-compose.secrets.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  run.sh
.github/: dependabot.yml
.github/scripts/: fetch_aruba_oas.py  fetch_greenlake_oas.py
.github/workflows/: ci.yml  docker.yml  greenlake-specs-refresh.yml  security.yml  sync-mist-openapi.yml  sync-new-central-oas.yml
.planning/phases/16-uxi-write-tools/: 16-01-SUMMARY.md  16-02-SUMMARY.md  16-03-SUMMARY.md
.planning/phases/17-correlation-skill/: 17-01-skill-authoring-SUMMARY.md  17-02-ci-tests-and-docs-SUMMARY.md
docs/: MIGRATING_TO_V2.md  PRD.md  PRP.md  TOOLS.md  tool-annotation-rubric.md
docs/mappings/: WLAN.md
scripts/: _mist_generator.py  distill_central_config_schemas.py  distill_mist_schemas.py  generate_edgeconnect_tools.py  import_central_config_tools.py  regenerate_mist_tools.py
secrets/: aos8_host.example  apstra_password.example  apstra_server.example  axis_api_token.example  central_base_url.example  central_client_id.example  central_client_secret.example  clearpass_client_id.example  clearpass_client_secret.example  clearpass_server.example  edgeconnect_api_key.example  edgeconnect_host.example  edgeconnect_user.example  greenlake_api_base_url.example  greenlake_client_id.example  greenlake_client_secret.example  greenlake_workspace_id.example  mist_api_token.example  mist_host.example
src/hpe_networking_mcp/: INSTRUCTIONS.md  __init__.py  __main__.py  code_sandbox.py  config.py  prefab_prewarm.py  server.py
src/hpe_networking_mcp/middleware/: elicitation.py  null_strip.py  origin_validation.py  pii_tokenization.py  response_envelope.py  retry.py  sandbox_error_catch.py  status_extraction.py  unknown_tool_suggest.py  validation_catch.py
src/hpe_networking_mcp/migrations/: __init__.py  engine.py  loader.py
src/hpe_networking_mcp/migrations/central_targets/: named_vlan_v1.json
src/hpe_networking_mcp/redaction/: __init__.py  mac_normalizer.py  rules.py  safe_summary.py  token_store.py  tokenizer.py  walker.py
src/hpe_networking_mcp/skills/: TEMPLATE.md  __init__.py  _engine.py  aos-migration-readiness.md  aos-migration.md  central-qos-policy.md  central-scope-audit.md  central-scope-visualizer.md  central-scope-walker.md  central-site-dashboard.md  central-ucc-quality.md  change-post-check.md  change-pre-check.md  clearpass-policy-walker.md  cross-platform-rf-check.md  greenlake-device-onboarding.md  infrastructure-health-check.md  mist-scope-audit.md  morning-coffee-report.md  uxi-cross-platform-diagnostics.md  wlan-sync-validation.md
src/hpe_networking_mcp/translations/: AUTHORING.md  __init__.py  engine.py  lint.py  loader.py  orchestrator.py  policy_enum_tables.py  transforms.py
src/hpe_networking_mcp/translations/canonical/: __init__.py  auth.py  gateway_cluster.py  net_group.py  policy.py  role.py  vlan.py  wlan.py
src/hpe_networking_mcp/translations/preprocessing/: __init__.py  aos8_aaa_profile.py  aos8_auth_server.py  aos8_captive_portal.py  aos8_dot1x_auth.py  aos8_gateway_cluster.py  aos8_mac_auth.py  aos8_net_group.py  aos8_policy.py  aos8_wlan_ssid.py
src/hpe_networking_mcp/translations/readers/: __init__.py  aos8.py  mist.py
src/hpe_networking_mcp/translations/readers/aos8/: __init__.py  _common.py  auth.py  gateway_cluster.py  net_group.py  policy.py  role.py  vlan.py  wlan.py
src/hpe_networking_mcp/translations/targets/central/: aaa_profile_v1.json  auth_server_v1.json  captive_portal_v1.json  dot1x_auth_v1.json  gateway_cluster_v1.json  mac_auth_v1.json  named_vlan_v1.json  net_group_v1.json  policy_v1.json  role_v1.json  server_group_v1.json  vlan_id_v1.json  wlan_ssid_v1.json
src/hpe_networking_mcp/translations/writers/: __init__.py  central.py  central_auth.py  central_common.py  central_config.py  central_policy.py  central_radius.py  mist.py
src/hpe_networking_mcp/utils/: logging.py  uploads.py
tests/: conftest.py
tests/integration/: conftest.py  test_ap_monitoring_live.py  test_config_loading.py  test_server.py  test_wlans_live.py
tests/unit/: test_aos8_cli_parser.py  test_aos8_client.py  test_aos8_config.py  test_aos8_helpers.py  test_aos8_init.py  test_aos8_prompts.py  test_aos8_read_alerts.py  test_aos8_read_clients.py  test_aos8_read_differentiators.py  test_aos8_read_health.py  test_aos8_read_troubleshooting.py  test_aos8_read_wlan.py  test_aos8_security.py  test_aos8_show_parser.py  test_aos8_write.py  test_apstra_client.py  test_apstra_config.py  test_apstra_dynamic_mode.py  test_apstra_models.py  test_apstra_topology.py  test_axis_dynamic_mode.py  test_capability_annotations.py  test_central_alert_actions.py  test_central_alert_configs.py  test_central_aos8_toolerror_contract.py  test_central_applications.py  test_central_audit_logs.py  test_central_cable_test.py  test_central_client.py  test_central_cnac_job_status.py  test_central_committed_config.py  test_central_config_health.py  test_central_config_schemas.py  test_central_configuration.py  test_central_disconnect_tools.py  test_central_dynamic_mode.py  test_central_enum_coercion.py  test_central_gateway_clusters.py  test_central_monitoring.py  test_central_mrt_ap_trend.py  (+101 more)
tests/unit/fixtures/: aos8_show_version.json
tests/unit/fixtures/aos8/: show_aaa_radius_server_detail.json  show_alarms.json  show_ap_arm_neighbors.json  show_ap_database.json  show_ap_monitor_active.json  show_ap_port_status.json  show_audit_trail.json  show_configuration_node_hierarchy.json  show_crypto_ipsec_sa.json  show_lc_cluster_group.json  show_log_system.json  show_pending_config.json  show_running_config.json  show_switch_hierarchy.json  show_switches.json  show_user_summary.json  show_user_table.json  show_user_table_verbose.json  ssid_prof.json  write_global_error.json  write_ssid_prof_success.json
