[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hpe-networking-mcp"
version = "3.1.0.10"
description = "Unofficial, community-driven MCP server for Juniper Mist, Aruba Central, HPE GreenLake, and ClearPass. Not affiliated with HPE, Aruba, or Juniper."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["mcp", "networking", "mist", "aruba", "central", "greenlake", "clearpass", "hpe"]
authors = [{ name = "Jon Adams" }]

dependencies = [
    # MCP framework — code-mode is the default tool mode since v3.0.0.0
    # (was opt-in via the fastmcp[code-mode] extra in v2.x); the extra is
    # now a hard requirement.
    "fastmcp[code-mode]>=3.1.1",
    # MCP protocol — GreenLake requires >=1.20.0
    "mcp[cli]>=1.20.0",
    # HPE Aruba Central API client
    "pycentral==2.0a17",
    # Async HTTP client — used by Mist (v3.1.0.0 spec-driven, replaced mistapi),
    # GreenLake, Apstra, Axis, AOS 8
    "httpx>=0.28.0",
    # Data validation — GreenLake explicit, others via FastMCP
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    # Environment/config loading
    "python-dotenv>=1.2.0",
    # Structured logging (used by GreenLake, adopted for unified server)
    "loguru>=0.7.3",
    # Tree data structure for Central scope hierarchy
    "treelib>=1.7.0",
    # Aruba ClearPass API client
    "pyclearpass>=1.0.0",
]

[project.scripts]
hpe-networking-mcp = "hpe_networking_mcp.__main__:main"

[project.urls]
Repository = "https://github.com/nowireless4u/hpe-networking-mcp"
Issues = "https://github.com/nowireless4u/hpe-networking-mcp/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatchling.build.targets.wheel]
packages = ["src/hpe_networking_mcp"]

[tool.hatchling.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/pyproject.toml"]

# Development dependencies
[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.2.0",
    "responses>=0.25.7",
    "ruff>=0.15.6",
    "mypy>=1.18.0",
    "bandit>=1.8.0",
    "pip-audit>=2.7.0",
    "pre-commit>=4.0.0",
    "types-requests>=2.31.0",
]

# Ruff configuration
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Generated Mist tools — long auto-emitted parameter annotations exceed
# the 120-char line limit. Generator emits self-explanatory descriptions
# verbatim from the OpenAPI spec; reformatting them at lint time would
# corrupt embedded JSON examples / quoted enum lists.
"src/hpe_networking_mcp/platforms/mist/tools/*.py" = ["E501"]
# Central models ported from upstream — naming conventions preserved
"src/hpe_networking_mcp/platforms/central/models.py" = ["N815"]

# Mypy configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "pycentral.*",
    "pyclearpass.*",
]
ignore_missing_imports = true


# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]
testpaths = ["tests"]

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B104", "B110"]  # B101: assert, B104: 0.0.0.0 bind (Docker), B110: try/except/pass in shutdown
